# split-python4gpt

./: .coveragerc  .isort.cfg  API.md  CHANGELOG.md  PLAN.md  README.md  TODO.md  llms.txt  mdsplit4gpt.spec  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: ci-workflow.yml  conf.py  index.md
scripts/: build-and-test.sh  get_version.py  install-dev.sh  install.sh  release.sh  validate_tag.py
src/split_python4gpt/: __init__.py  __main__.py  minifier.py
tests/: conftest.py  test_cli.py  test_minifier.py  test_performance.py  test_skeleton.py  test_version.py
tests/data/: out_test.py  syntax_error_in.py  type_in.py
tests/data/folder_in/: file1.py
tests/data/folder_in/subdir/: file2.py
