[metadata]
name = split_python4gpt
description = Python tool designed to reorganize large Python projects into minified files based on a specified token limit. This is particularly useful for processing large Python projects with GPT models, as it allows the models to handle the data in manageable chunks.
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/split-python4gpt
project_urls =
    Documentation = https://twardoch.github.io/split-python4gpt/
    Source = https://github.com/twardoch/split-python4gpt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Text Processing
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = python, code-summarization, openai, text-summarization, summarization, code-processing, gpt, data-preprocessing, openai-gpt, gpt-3, gpt-4, gpt-35-turbo, gpt-35-turbo-16k

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.10, <3.11
install_requires =
    fire>=0.5.0
    tiktoken>=0.4.0
    python-minifier>=2.9.0
    pytype>=2023.6.16
    simpleaichat>=0.2.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    mdsplit4gpt = split_python4gpt.__main__:cli


[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = split_python4gpt
extensions =
    github_actions
    markdown
    pre_commit
